<resources>
    <string name="app_name">SnapSafe</string>
    <string name="new_album_name">Enter Album Name</string>
    <string name="album_dialog_title">New Album</string>
    <string name="album_dialog_message">Create new album from selected item(s)?</string>
    <string name="positive_btn_create">CREATE</string>
    <string name="album_dialog_empty">Field cannot be empty.</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="delete_dialog_message">Delete selected item(s)? This action cannot be undone.</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="user_album_photo">Content Album Photo</string>
    <string name="create_album">Create Album</string>
    <string name="create_new_album">Create New Album</string>
    <string name="create_dialog_exists_error">Album %s already exists.</string>
    <string name="enter_album_tags">Include Tags (Optional)</string>
    <string name="detail_photo">Detail Photo</string>
    <string name="select">Select Content</string>
    <string name="import_photos">Import Images</string>
    <string name="move_photos">Take Photo</string>
    <string name="snapsafe_image">SnapSafe Image</string>
    <string name="photos">Images</string>
    <string name="albums">Folders</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="zero_selected">0 Selected</string>
    <string name="items_selected">\u0020Selected</string>
    <string name="grid_span_of_two">Two Columns</string>
    <string name="grid_span_of_three">Three Columns</string>
    <string name="grid_span_of_four">Four Columns</string>
    <string name="grid_span_of_five">Five Columns</string>
    <string name="make_copies">Make copies of selected item(s)?</string>
    <string name="title_activity_scroll_gallery">ScrollGalleryActivity</string>
    <string name="album_name_special_chars">Album name cannot contain special characters.</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="icon">Icon</string>
    <string name="about">About</string>
    <string name="column_span">Column Span</string>
    <string name="settings">Settings</string>
    <string name="sort_by">Sort By</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="order">Order</string>
    <string name="by_date">By Date</string>
    <string name="by_folder">By Folder</string>
    <string name="by_tag">By Tag</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
