<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sorting_date"
            android:title="@string/by_date" />
        <item
            android:id="@+id/sorting_folder"
            android:title="@string/by_folder" />
        <item
            android:id="@+id/sorting_tag"
            android:title="@string/by_tag" />
    </group>

    <item
        android:id="@+id/sort_order"
        android:title="@string/order">
        <menu>
            <group
                android:id="@+id/group_2"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sorting_ascending"
                    android:title="@string/ascending" />
                <item
                    android:id="@+id/sorting_descending"
                    android:title="@string/descending" />
            </group>
        </menu>
    </item>

</menu>