<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="contentViewModel"
            type="productions.darthplagueis.contentvault.photos.UserContentViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/appbar_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/gallery_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@android:color/white"
                app:contentInsetEnd="@dimen/no_margin"
                app:contentInsetLeft="@dimen/no_margin"
                app:contentInsetRight="@dimen/no_margin"
                app:contentInsetStart="@dimen/no_margin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <include
                    android:id="@+id/photoActionBar"
                    layout="@layout/photo_action_toolbar" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/gallery_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:clipToPadding="false"
            android:scrollbars="vertical" />

        <View
            android:id="@+id/fab_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/fabExtendedBackground"
            android:onClick="@{() -> contentViewModel.closeFab()}"
            android:visibility="@{contentViewModel.isFabExtending ? View.VISIBLE : View.GONE}"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/fab_layout03"
            closeAnimation="@{contentViewModel.isFabClosing}"
            openAnimation="@{contentViewModel.isFabExtending}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/mini_fab_margin"
            android:layout_marginEnd="@dimen/mini_fab_margin"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:padding="@dimen/childView_margin"
            android:visibility="@{contentViewModel.isFabExtending ? View.VISIBLE : View.GONE}"
            tools:visibility="visible">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorSurfaceDark"
                app:cardElevation="@dimen/card_elevation_6"
                app:cardUseCompatPadding="true"
                app:contentPadding="4dp">

                <TextView
                    android:id="@+id/fab_title03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:textAppearance="@style/FontButton14sp" />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/mini_fab03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> contentViewModel.selectPhotos()}"
                app:backgroundTint="?attr/fabColor"
                app:elevation="@dimen/fab_elevation"
                app:fabSize="mini"
                app:rippleColor="@color/black38alpha"
                app:srcCompat="@drawable/ic_done_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fab_layout02"
            closeAnimation="@{contentViewModel.isFabClosing}"
            openAnimation="@{contentViewModel.isFabExtending}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/mini_fab_margin"
            android:layout_marginEnd="@dimen/mini_fab_margin"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:padding="@dimen/childView_margin"
            android:visibility="@{contentViewModel.isFabExtending ? View.VISIBLE : View.GONE}"
            tools:visibility="visible">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorSurfaceDark"
                app:cardElevation="@dimen/card_elevation_6"
                app:cardUseCompatPadding="true"
                app:contentPadding="4dp">

                <TextView
                    android:id="@+id/fab_title02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/move_photos"
                    android:textAppearance="@style/FontButton14sp" />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/mini_fab02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="?attr/fabColor"
                app:elevation="@dimen/fab_elevation"
                app:fabSize="mini"
                app:rippleColor="@color/black38alpha"
                app:srcCompat="@drawable/ic_camera_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fab_layout01"
            closeAnimation="@{contentViewModel.isFabClosing}"
            openAnimation="@{contentViewModel.isFabExtending}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/mini_fab_margin"
            android:layout_marginEnd="@dimen/mini_fab_margin"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:padding="@dimen/childView_margin"
            android:visibility="@{contentViewModel.isFabExtending ? View.VISIBLE : View.GONE}"
            tools:visibility="visible">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorSurfaceDark"
                app:cardElevation="@dimen/card_elevation_6"
                app:cardUseCompatPadding="true"
                app:contentPadding="4dp">

                <TextView
                    android:id="@+id/fab_title01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_photos"
                    android:textAppearance="@style/FontButton14sp" />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/mini_fab01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> contentViewModel.importPhotos()}"
                app:backgroundTint="?attr/fabColor"
                app:elevation="@dimen/fab_elevation"
                app:fabSize="mini"
                app:rippleColor="@color/black38alpha"
                app:srcCompat="@drawable/ic_input_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:padding="@dimen/childView_margin">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/photos_fab"
                closeAnimation="@{contentViewModel.isFabClosing}"
                openAnimation="@{contentViewModel.isFabExtending}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> contentViewModel.extendFab()}"
                app:backgroundTint="?attr/fabColor"
                app:elevation="@dimen/fab_elevation"
                app:fabSize="normal"
                app:rippleColor="@color/black38alpha"
                app:srcCompat="@drawable/ic_add_black_24dp" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>